syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service ApplicantEducation{

	rpc ReadApplicantEducation(ApplicantEducationRequest) returns (ApplicantEducationPayload);
	rpc CreateApplicantEducation(ApplicantEducationPayload) returns (google.protobuf.Empty);
	rpc UpdateApplicantEducation(ApplicantEducationPayload) returns (google.protobuf.Empty);
	rpc DeleteApplicantEducation(ApplicantEducationPayload) returns (google.protobuf.Empty);
	}
	message ApplicantEducationRequest{

		string Id = 1;
	}
	message ApplicantEducationPayload{
		
        string Id = 1 ;
		string Applicant = 2; 
        string Major = 3;     
        string CertificateDiploma = 4;      
		
         google.protobuf.Timestamp  StartDate = 5;      
         google.protobuf.Timestamp CompletionDate = 6;    
		 
         int32 CompletionPercent = 7;
	}

